[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/imgs/Food.png" type="Texture" id=1]
[ext_resource path="res://objects/Food.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=7]
radius = 7.24193

[node name="Food" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 8

[node name="Area2D" type="Area2D" parent="." groups=[
"food",
]]
collision_layer = 34
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
